force-app/main/default/objects/AM_Producto__c/AM_Producto__c.object-meta.xml
<CustomObject>
    <label>Producto.</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Productos.</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>