force-app/main/default/objects/AM_Producto__c/fields/AM_Ano__c.field-meta.xml
<CustomField>
    <fullName>AM_Ano__c</fullName>
    <label>Año</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>