force-app/main/default/objects/AM_Producto__c/fields/AM_Arranque__c.field-meta.xml
<CustomField>
    <fullName>AM_Arranque__c</fullName>
    <label>Horse Power</label>
    <length>125</length>
    <type>Text</type>
</CustomField>