force-app/main/default/objects/AM_Producto__c/fields/AM_Atributo_relevante_1__c.field-meta.xml
<CustomField>
    <fullName>AM_Atributo_relevante_1__c</fullName>
    <label>Atributo relevante 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>