force-app/main/default/objects/AM_Producto__c/fields/AM_Caja__c.field-meta.xml
<CustomField>
    <fullName>AM_Caja__c</fullName>
    <label>Caja</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUT</fullName>
            </value>
            <value>
                <fullName>MEC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>