force-app/main/default/objects/AM_Producto__c/fields/AM_Certificacion__c.field-meta.xml
<CustomField>
    <fullName>AM_Certificacion__c</fullName>
    <label>Certificación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Euro I</fullName>
            </value>
            <value>
                <fullName>Euro II</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>