force-app/main/default/objects/AM_Producto__c/fields/AM_Cilindraje__c.field-meta.xml
<CustomField>
    <fullName>AM_Cilindraje__c</fullName>
    <inlineHelpText>(cm3)</inlineHelpText>
    <label>Cilindraje</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>