force-app/main/default/objects/AM_Producto__c/fields/AM_Ciudad_placa_usado__c.field-meta.xml
<CustomField>
    <fullName>AM_Ciudad_placa_usado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciudad placa (usado)</label>
    <referenceTo>AM_Municipio__c</referenceTo>
    <relationshipLabel>Productos.</relationshipLabel>
    <relationshipName>Productos</relationshipName>
    <type>Lookup</type>
</CustomField>