force-app/main/default/objects/AM_Producto__c/fields/AM_Codigo_de_producto__c.field-meta.xml
<CustomField>
    <fullName>AM_Codigo_de_producto__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Código de la motocicleta para ser enviado en la solicitud de pre-liquidación de crédito a SIPRES.</inlineHelpText>
    <label>Código de producto</label>
    <length>5</length>
    <type>Text</type>
</CustomField>