force-app/main/default/objects/AM_Producto__c/fields/AM_Color_disponible__c.field-meta.xml
<CustomField>
    <fullName>AM_Color_disponible__c</fullName>
    <label>Color disponible</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACERO MODERNO</fullName>
            </value>
            <value>
                <fullName>AZUL</fullName>
            </value>
            <value>
                <fullName>AZUL BRILLANTE</fullName>
            </value>
            <value>
                <fullName>AZUL OBSIDIAN</fullName>
            </value>
            <value>
                <fullName>AZUL OCEANO</fullName>
            </value>
            <value>
                <fullName>AZUL PLATA</fullName>
            </value>
            <value>
                <fullName>AZUL SPORT</fullName>
            </value>
            <value>
                <fullName>BLANCO</fullName>
            </value>
            <value>
                <fullName>BLANCO DIAMANTE</fullName>
            </value>
            <value>
                <fullName>BLANCO ORQUIDEA</fullName>
            </value>
            <value>
                <fullName>BLANCO ORQUÍDEA</fullName>
            </value>
            <value>
                <fullName>BLANCO PERLA ANDES</fullName>
            </value>
            <value>
                <fullName>BLANCO PLATINO</fullName>
            </value>
            <value>
                <fullName>BLANCO TAFFETA</fullName>
            </value>
            <value>
                <fullName>GRIS METÁLICO</fullName>
            </value>
            <value>
                <fullName>METALICO RADIANTE</fullName>
            </value>
            <value>
                <fullName>MOCCA</fullName>
            </value>
            <value>
                <fullName>NEGRO</fullName>
            </value>
            <value>
                <fullName>NEGRO CRISTAL</fullName>
            </value>
            <value>
                <fullName>PLATA ALABASTER</fullName>
            </value>
            <value>
                <fullName>PLATA LUNAR</fullName>
            </value>
            <value>
                <fullName>PLATEADO</fullName>
            </value>
            <value>
                <fullName>ROJO</fullName>
            </value>
            <value>
                <fullName>ROJO DÍNAMO</fullName>
            </value>
            <value>
                <fullName>ROJO INTENSO</fullName>
            </value>
            <value>
                <fullName>ROJO MILANO</fullName>
            </value>
            <value>
                <fullName>ROJO PASION</fullName>
            </value>
            <value>
                <fullName>ROJO PASIÓN</fullName>
            </value>
            <value>
                <fullName>ROJO RUBI</fullName>
            </value>
            <value>
                <fullName>SHORELINA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>