force-app/main/default/objects/AM_Producto__c/fields/AM_Dimensiones__c.field-meta.xml
<CustomField>
    <fullName>AM_Dimensiones__c</fullName>
    <inlineHelpText>Dimensiones en Largo x Ancho x Alto</inlineHelpText>
    <label>Dimensiones (L x An x AI)</label>
    <length>125</length>
    <type>Text</type>
</CustomField>