force-app/main/default/objects/AM_Producto__c/fields/AM_Foto_modelo__c.field-meta.xml
<CustomField>
    <fullName>AM_Foto_modelo__c</fullName>
    <formula>IMAGE
(
	IF
	(
		NOT
		(
			ISBLANK
			(
				AM_Codigo_de_producto__c
			)
		), 
		AM_URL_foto__c, 
		&quot;https://c.na78.content.force.com/servlet/servlet.ImageServer?id=015o0000000hzS9&amp;oid=00Do0000000aReC&amp;lastMod=1383010138000&quot;
	), 
	&quot;Imagen no disponible&quot;,
	150,
	270
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Foto modelo</label>
    <type>Text</type>
</CustomField>