force-app/main/default/objects/AM_Producto__c/fields/AM_Kilometraje__c.field-meta.xml
<CustomField>
    <fullName>AM_Kilometraje__c</fullName>
    <label>Kilometraje usado</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>