force-app/main/default/objects/AM_Producto__c/fields/AM_Linea__c.field-meta.xml
<CustomField>
    <fullName>AM_Linea__c</fullName>
    <description>Línea de modelo de interés del producto seleccionado.</description>
    <inlineHelpText>Línea de modelo de interés del producto seleccionado.</inlineHelpText>
    <label>Linea</label>
    <length>20</length>
    <type>Text</type>
</CustomField>