force-app/main/default/objects/AM_Producto__c/fields/AM_Marca_usado__c.field-meta.xml
<CustomField>
    <fullName>AM_Marca_usado__c</fullName>
    <label>Marca usado</label>
    <length>40</length>
    <type>Text</type>
</CustomField>