force-app/main/default/objects/AM_Producto__c/fields/AM_Motor__c.field-meta.xml
<CustomField>
    <fullName>AM_Motor__c</fullName>
    <label>Motor</label>
    <length>125</length>
    <type>Text</type>
</CustomField>