force-app/main/default/objects/AM_Producto__c/fields/AM_Peso_en_seco__c.field-meta.xml
<CustomField>
    <fullName>AM_Peso_en_seco__c</fullName>
    <label>Peso en seco</label>
    <length>125</length>
    <type>Text</type>
</CustomField>