force-app/main/default/objects/AM_Producto__c/fields/AM_Placa_usado__c.field-meta.xml
<CustomField>
    <fullName>AM_Placa_usado__c</fullName>
    <label>Placa usado</label>
    <length>6</length>
    <type>Text</type>
</CustomField>