force-app/main/default/objects/AM_Producto__c/fields/AM_Porcentaje_IVA__c.field-meta.xml
<CustomField>
    <fullName>AM_Porcentaje_IVA__c</fullName>
    <inlineHelpText>Porcentaje del IVA</inlineHelpText>
    <label>% IVA</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>