force-app/main/default/objects/AM_Producto__c/fields/AM_Potencia_maxima__c.field-meta.xml
<CustomField>
    <fullName>AM_Potencia_maxima__c</fullName>
    <label>Potencia máxima</label>
    <length>125</length>
    <type>Text</type>
</CustomField>