force-app/main/default/objects/AM_Producto__c/fields/AM_Precio_de_lista__c.field-meta.xml
<CustomField>
    <fullName>AM_Precio_de_lista__c</fullName>
    <label>Precio de lista</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>