force-app/main/default/objects/AM_Producto__c/fields/AM_Relacion_de_compresion__c.field-meta.xml
<CustomField>
    <fullName>AM_Relacion_de_compresion__c</fullName>
    <label>Relación de compresión</label>
    <length>125</length>
    <type>Text</type>
</CustomField>