force-app/main/default/objects/AM_Producto__c/fields/AM_Tipo_de_motocicleta__c.field-meta.xml
<CustomField>
    <fullName>AM_Tipo_de_motocicleta__c</fullName>
    <label>Tipo de motocicleta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Motocicleta</fullName>
            </value>
            <value>
                <fullName>Cuatrimoto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>