force-app/main/default/objects/AM_Producto__c/fields/AM_Tipo_Vehiculo_nuevo_usado__c.field-meta.xml
<CustomField>
    <fullName>AM_Tipo_Vehiculo_nuevo_usado__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USADO</fullName>
            </value>
            <value>
                <fullName>NUEVO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>