force-app/main/default/objects/AM_Producto__c/fields/AM_Transmision__c.field-meta.xml
<CustomField>
    <fullName>AM_Transmision__c</fullName>
    <label>Transmisión</label>
    <length>250</length>
    <type>Text</type>
</CustomField>