force-app/main/default/objects/AM_Producto__c/fields/AM_URL_foto__c.field-meta.xml
<CustomField>
    <fullName>AM_URL_foto__c</fullName>
    <inlineHelpText>Ubicación de la foto en la carpeta Recursos del sistema</inlineHelpText>
    <label>URL foto</label>
    <type>Url</type>
</CustomField>