force-app/main/default/objects/AM_Producto__c/fields/AM_Version__c.field-meta.xml
<CustomField>
    <fullName>AM_Version__c</fullName>
    <description>Versión del modelo de interés seleccionado.</description>
    <inlineHelpText>Versión del modelo de interés seleccionado.</inlineHelpText>
    <label>Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>