force-app/main/default/objects/AM_Producto__c/fields/AM_Vin_usado__c.field-meta.xml
<CustomField>
    <fullName>AM_Vin_usado__c</fullName>
    <label>Vin usado</label>
    <length>10</length>
    <type>Text</type>
</CustomField>