force-app/main/default/objects/AM_Producto__c/fields/Atributo_relevante_4__c.field-meta.xml
<CustomField>
    <fullName>Atributo_relevante_4__c</fullName>
    <label>Atributo relevante 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>