force-app/main/default/objects/AM_Producto__c/fields/id_salesforce_18__c.field-meta.xml
<CustomField>
    <fullName>id_salesforce_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>id salesforce 18</label>
    <type>Text</type>
</CustomField>