force-app/main/default/objects/AM_Producto__c/fields/Plan_Tipo_de_Modelo_Unoe__c.field-meta.xml
<CustomField>
    <fullName>Plan_Tipo_de_Modelo_Unoe__c</fullName>
    <label>Plan Tipo de Modelo Unoe</label>
    <length>20</length>
    <type>Text</type>
</CustomField>