force-app/main/default/objects/AM_Producto__c/fields/SO_Alerta_de_colision_frontal__c.field-meta.xml
<CustomField>
    <fullName>SO_Alerta_de_colision_frontal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alerta de colision frontal</label>
    <type>Checkbox</type>
</CustomField>