force-app/main/default/objects/AM_Producto__c/fields/SO_Control_electronico_de_estabilidad__c.field-meta.xml
<CustomField>
    <fullName>SO_Control_electronico_de_estabilidad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Control electronico de estabilidad</label>
    <type>Checkbox</type>
</CustomField>