force-app/main/default/objects/AM_Producto__c/fields/SO_Frenado_autonomo_de_emergencia__c.field-meta.xml
<CustomField>
    <fullName>SO_Frenado_autonomo_de_emergencia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frenado autonomo de emergencia</label>
    <type>Checkbox</type>
</CustomField>