force-app/main/default/objects/AM_Producto__c/fields/SO_Numero_de_bolsas_de_aire__c.field-meta.xml
<CustomField>
    <fullName>SO_Numero_de_bolsas_de_aire__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Numero de bolsas de aire</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>