force-app/main/default/objects/AM_Producto__c/fields/SO_Sistema_antibloqueo_de_frenos__c.field-meta.xml
<CustomField>
    <fullName>SO_Sistema_antibloqueo_de_frenos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sistema antibloqueo de frenos</label>
    <type>Checkbox</type>
</CustomField>