force-app/main/default/objects/AM_Producto__c/fields/SO_Sistema_de_bolsa_de_aire__c.field-meta.xml
<CustomField>
    <fullName>SO_Sistema_de_bolsa_de_aire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sistema de bolsa de aire</label>
    <type>Checkbox</type>
</CustomField>