force-app/main/default/objects/AM_Producto__c/fields/SO_Sistema_de_sujecion_infantil__c.field-meta.xml
<CustomField>
    <fullName>SO_Sistema_de_sujecion_infantil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sistema de sujecion infantil</label>
    <type>Checkbox</type>
</CustomField>