force-app/main/default/objects/AM_Producto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AM_Linea__c</columns>
    <columns>AM_Codigo_de_producto__c</columns>
    <columns>AM_Activo__c</columns>
    <columns>AM_Precio_de_lista__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>